:construction: Configuraçao via Groovy

--- a/03-jenkins-auto-configuracao-as-a-code/recursos-v2/v.2.0.0/config/globals.properties
+++ b/03-jenkins-auto-configuracao-as-a-code/recursos-v2/v.2.0.0/config/globals.properties
@@ -1,7 +1,7 @@
 default_credentials_id = "jenkins_rsa"
 
 images {
-  masterImageName = "rodrigogrohl/code-jenkins"
+  masterImageName = "rafaelbarros/code-jenkins"
 }
 
 registry {
@@ -17,7 +17,7 @@ global {
   scmCheckoutRetryCount = 3
   git {
     name = "Jenkins Git User"
-    email = "rafaellbarros.df@gmail.com"
+    email = "rafaelbarros.df@gmail.com"
   }
   variables {
     default_credentials = "${default_credentials_id}"
