--- a/03-jenkins-auto-configuracao-as-a-code/recursos-v2/v.2.0.0/Dockerfile
+++ b/03-jenkins-auto-configuracao-as-a-code/recursos-v2/v.2.0.0/Dockerfile
@@ -1,4 +1,4 @@
-FROM jenkins/jenkins:2.303.1
+FROM jenkins/jenkins:2.303.3
 
 LABEL Author="Rafael Barros Silva" 
 
@@ -6,6 +6,9 @@ ARG master_image_version="v.2.0.0"
 ENV master_image_version $master_image_version
 
 USER jenkins
+RUN echo 2.303.3 > /usr/share/jenkins/ref/jenkins.install.UpgradeWizard.state
+RUN echo 2.303.3 > /usr/share/jenkins/ref/jenkins.install.InstallUtil.lastExecVersion
+
 # Plugins Install
 COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
 RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/ref/plugins.txt
