:construction: Kubernetes Plugin - v2.2.1

--- a/04-kubernetes-plugin/v.2.2.1/jenkins-init-groovy/src/main/resources/clouds.properties
+++ b/04-kubernetes-plugin/v.2.2.1/jenkins-init-groovy/src/main/resources/clouds.properties
@@ -10,9 +10,9 @@ kubernetes {
 
         pods {
             basic {
-                name = "slave-kube-basic"
+                name = "default-jenkins-slave"
                 namespace = "default"
-                label = "slave-basic"
+                label = "kube-default-slave"
                 containers {
                     jnlp {
                         name = "jnlp"
