--- a/04-kubernetes-plugin/v.2.2.1/jenkins-init-groovy/src/main/resources/initial-jobs.properties
+++ b/04-kubernetes-plugin/v.2.2.1/jenkins-init-groovy/src/main/resources/initial-jobs.properties
@@ -5,7 +5,7 @@ initialjobs {
     parameters {
     }
   }
-  pipeline {
+  another {
     name = "another-pipeline"
     pipelineFile = "pipeline-another.file"
     parameters {
